# heartline-chat

./: .gitignore  DESIGN.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  events.rs  lib.rs  main.rs  whisper.rs
src-tauri/src/inference/: api.rs  manager.rs  mod.rs  types.rs
src/components/chat/: ChatWindow.tsx
src/components/companions/: CompanionEditor.tsx
src/components/layout/: MemorySaveToast.tsx  ModelPullToast.tsx  PanelLayout.tsx  TitleBar.tsx
src/components/settings/: SettingsPanel.tsx
src/components/sidebar/: ChatsList.tsx
src/components/viewport/: AvatarViewport.tsx
src/lib/: tauri.ts
src/stores/: chatStore.ts
src/styles/: theme.css
