[package]
name = "heartline"
version = "0.1.0"
edition = "2021"
description = "AI companion chat with voice and 3D avatar"

[lib]
name = "heartline_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
async-trait = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"
hound = "3.5"
